--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
       <div class="mcode" id="msaves">
         <p class="mpre">
 {
-    "lyrics": [</p>
+    "lyrics": [
+        {"line": "", "time":-1},</p>
         <div id="dodol"></div>
         <p class="mpre">    ]
 }
