--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     "lyrics": [
            {"line": "", "time":-1},</p>
         <div id="dodol"></div>
+        <p id="enma" class="mpre"></p>
         <p class="mpre">    ]
 }
         </p>
@@ -59,8 +60,8 @@
 - Unggah lagu anda
 - Putar audio anda
 - Tempel setiap baris pada lirik
-- Kopas pada file json anda
-- hapus ',' di bagian akhir mis. '{ "line": "Thanks For Visit", "time": 220000 },' menjadi '{ "line": "Thanks For Visit", "time": 220000 }'
+- Wajib pemutaran sampai habis
+- Salin lalu tempel pada file json anda
 - Jika terjadi kekacauan pada lirik ubah time mis. 180.00231 menjadi 180
         </p>
       </article>
