--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="main">
     <div class="mdonatelah" onclick="mDonate()"><p class="najd">D O N A S I</p><b>T E R I M A K A S I H</b></div>
     <header>
-      <h1>PEMBUAT LIRIK</h1>
+      <h1 class="anton-regular">PEMBUAT LIRIK</h1>
     </header>
     <main>
       <label>Unggah mp3</label>
