--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <form>
         <input id="item" class="input" type="text" placeholder="Tambahkan baris lirik.." required>
       </form>
-      <h2>JSON</h2>
+      <h2 class="anton-regular">JSON</h2>
       <div class="mcode" id="msaves">
         <p class="mpre">
 {
@@ -58,7 +58,7 @@
         </p>
       </div>
       <button id="zbtn">Hapus Semua</button>
-      <h2>CATATAN</h2>
+      <h2 class="anton-regular">CATATAN</h2>
       <article class="mcode">
         <p class="mpre">
 - Siapkan lagu dan lirik lagu
