--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         <div id="dodol"></div>
         <p id="enma" class="mpre"></p>
         <p class="mpre">    ]
-}
-        </p>
+}</p>
       </div>
+      <button id="msalin" class="bbtn" style="display: none;" onclick="copyDivToClipboard()">Salin</button>
       <button id="zbtn">Hapus Semua</button>
       <h2 class="anton-regular">CATATAN</h2>
       <article class="mcode">
