--- a/index.html
+++ b/index.html
@@ -46,29 +46,25 @@
         <input id="item" class="input" type="text" placeholder="Tambahkan baris lirik.." required>
       </form>
       <h2 class="anton-regular">JSON</h2>
-      <div class="mcode" id="msaves">
-        <p class="mpre">
+      <div class="mcode" id="msaves"><p class="mpre">
 {
     "lyrics": [
            {"line": "", "time":-1},</p>
         <div id="dodol"></div>
         <p id="enma" class="mpre"></p>
         <p class="mpre">    ]
-}</p>
-      </div>
+}</p></div>
       <button id="msalin" class="bbtn" style="display: none;" onclick="copyDivToClipboard()">Salin</button>
       <button id="zbtn">Hapus Semua</button>
       <h2 class="anton-regular">CATATAN</h2>
       <article class="mcode">
-        <p class="mpre">
-- Siapkan lagu dan lirik lagu
+        <p class="mpre">- Siapkan lagu dan lirik lagu
 - Unggah lagu anda
 - Putar audio anda
 - Tempel setiap baris pada lirik
 - Wajib pemutaran sampai habis
 - Salin lalu tempel pada file json anda
-- Jika terjadi kekacauan pada lirik ubah time mis. 180.00231 menjadi 180
-        </p>
+- Jika terjadi kekacauan pada lirik ubah time mis. 180.00231 menjadi 180</p>
       </article>
       <button class="bbtn" onclick="mPreview()">Tinjau</button>
     </main>
