--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
         <input id="item" class="input" type="text" placeholder="Tambahkan baris lirik.." required>
       </form>
       <h2 class="anton-regular">JSON</h2>
-      <div class="mcode" id="msaves"><p class="mpre">
-{
+      <div class="mcode" id="msaves"><p class="mpre">{
     "lyrics": [
            {"line": "", "time":-1},</p>
         <div id="dodol"></div>
