--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
   <meta property="og:description" content="Kami hadir untuk memudahkan anda dalam pembuatan lirik dari file json">
   <meta property="og:image" content="logo.png">
   <link rel="canonical" href="https://darkcluemusic.github.io/lyrics-maker/">
+  <meta property="og:site_name" content="DARK CLUE MUSIC">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image:alt" content="Dark Clue Music">
+  <meta property="fb:app_id" content="darkcluemusic">
+  <meta name="twitter:site" content="@darkcluemusic">
   <!-- Style -->
   <link rel="stylesheet" href="style.css">
   <!-- Fonts -->
