--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </audio>
       <p class="scp">Milidetik : <input type="text" id="audioTime" oncontextmenu="return false;" onkeydown="return false;" onmousedown="return false;" placeholder="0" readonly required></p>
       <form>
-        <input id="item" class="input" type="text" placeholder="Tambahkan baris lirik.." required>
+        <input id="item" class="input" type="text" placeholder="Tambahkan baris lirik.." maxlength="35" required>
       </form>
       <h2 class="anton-regular">JSON</h2>
       <div class="mcode" id="msaves"><p class="mpre">{
