--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 - Salin lalu tempel pada file json anda
 - Jika terjadi kekacauan pada lirik ubah time mis. 180.00231 menjadi 180</p>
       </article>
-      <button class="bbtn" onclick="mPreview()">Tinjau</button>
+      <button class="bbtn" title="JSON To LRC" onclick="mPreview()">JSON To LRC</button>
     </main>
     <footer>
       <p>Dipersembahkan oleh <b><a title="Suryo DwiJayanto" target="_blank" href="https://www.google.com/search?q=Suryo%20DwiJayanto">Suryo DwiJayanto</a></b></p>
