--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   
     gtag('config', 'G-W031KBWLW2');
   </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1674327749539491" crossorigin="anonymous"></script>
 </head>
 
 <body id="myCopyright">
